more work on the box's ui